--- a/Downloads/Website/estiloEco.css
+++ b/Downloads/Website/estiloEco.css
@@ -124,9 +124,6 @@ figure img:hover{
 
 ul>li>a {
 	background: #DAA520;
-	font-weight: bold
-}
-
-#container{
+	font-weight: bold;
 	height: 100px;
 }
