--- a/Downloads/Website/estiloEco.css
+++ b/Downloads/Website/estiloEco.css
@@ -154,8 +154,13 @@ ul>li>a:hover {
 	margin-top: 20%;
 }
 
+.navbar-brand{
+	background: #ead4d7;
+}
+
 #Titulo{
 	margin-top: -9px
+	
 }
 
 #subtituloproductos{
