--- a/Downloads/Website/estiloEco.css
+++ b/Downloads/Website/estiloEco.css
@@ -143,7 +143,7 @@ ul>li>a:hover {
 .thumbnail {
     padding: 0;
     height:100px;
-    margin-top: 80px;
+    margin-top: 5%;
 }
 
 .col-sm-3 {
@@ -154,7 +154,7 @@ ul>li>a:hover {
 	margin-top: 20%;
 }
 
-.navbar-fixed-top{
+.{
 	background: #ead4d7;
 }
 
@@ -164,6 +164,7 @@ ul>li>a:hover {
 }
 
 #subtituloproductos{
-	margin-top: 10%;
+	margin-top: 5%;
+	text-align: left;
 }
 
