--- a/Downloads/Website/estiloEco.css
+++ b/Downloads/Website/estiloEco.css
@@ -135,7 +135,7 @@ ul>li>a:hover {
 
 
 .hide-bullets {
-    list-style:none;
+    list-style: circle;
     margin-left: -40px;
     margin-top: 20%;
 }
