--- a/Downloads/Website/estiloEco.css
+++ b/Downloads/Website/estiloEco.css
@@ -135,7 +135,7 @@ ul>li>a:hover {
 
 
 .hide-bullets {
-    list-style: circle;
+    list-style: none;
     margin-left: -40px;
     margin-top: 20%;
 }
@@ -143,7 +143,7 @@ ul>li>a:hover {
 .thumbnail {
     padding: 0;
     height:100px;
-    margin: 0px 10px
+    margin: 10px 10px
 }
 
 .col-sm-3 {
